--- a/_includes/body.html
+++ b/_includes/body.html
@@ -19,7 +19,7 @@
     <div class="row align-items-center h-100 mx-lg-5 mx-md-3">
       <div class="col-md-6 mb-4">
         
-                      <img src="assets/images/personal-logo.png" class="img-fluid wow fadeIn " data-wow-delay="0.5s" alt="Responsive image">
+                <img src="assets/images/personal-logo.png" class="img-fluid wow fadeIn " data-wow-delay="0.5s" alt="Responsive image">
 
               <div class="container">
 
@@ -68,10 +68,23 @@
             <p class="h5-responsive">
 
             Always passionate about the ICT world and everything related to it. The discovery of the <strong>DevOps Movement</strong>, even more for the continuous process of learning and above all sharing <strong>OpenSource</strong>, is reflected in my professional development trying to bring my enthusiasm for technology through communication and sharing.<br><br>
-            And yes, I'm a passionate <strong>DevOps Engineer</strong> who in recent projects has used tools such as <strong>Jenkins, Docker, Vagrant, K8s, Ansible and Openshift</strong>
+            As a <strong>DevOps Engineer</strong>, I started with cultivating the <strong>DevOps Culture</strong> when we moved from Monolith to Microservice Implementation. Further automated the process end-to-end. Right from Building the code <strong>(CI)</strong> to deploying it to different enviornment <strong>(CD)</strong>. Recently started creating Infrastructure with the help of code <strong>(IAC)</strong>.
             </p><br>
             
-            <h5 class="h5-responsive">
+            <div class="row justify-content-md-center">
+              <div class="col-4 col-md-4 col-sm-4">
+                <a href="https://www.credly.com/badges/c866e855-83a3-4d34-846b-6c93fe759ea5"><img src="assets/images/Oracle_Associates_Badge__1_.png" class="img-fluid wow fadeIn hvr-grow-rotate" width="100" data-wow-delay="0.5s" alt="Responsive image"></a>
+                 
+              </div>
+              <div class="col-4 col-md-4 col-sm-4">
+                <a href="https://www.credly.com/badges/074fd766-99d4-4452-9b92-6729a633b10c"><img src="assets/images/cka_from_cncfsite__281_29.png" class="img-fluid wow fadeIn hvr-grow-rotate" width="100" data-wow-delay="0.5s" alt="Responsive image"></a>
+              </div>
+              <div class="col-4 col-md-4 col-sm-4">
+                <a href="https://www.credly.com/badges/1887bd03-cd23-4fee-ba03-e3d81852878e"><img src="assets/images/ckad_from_cncfsite.png" class="img-fluid wow fadeIn hvr-grow-rotate" width="100" data-wow-delay="0.5s" alt="Responsive image"></a>
+              </div>
+            </div>
+            
+            <h5 class="h5-responsive mt-3">
             <strong>Current:</strong> <a target="_blank" href="https://www.sourcesense.com/"><u>Sourcesense</u></a>
             </h5>
             <hr>
