--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+
+  <link rel="shortcut icon" href="{{ '/assets/images/personal-logo.png' | relative_url }}">
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="/assets/css/mdb.min.css">
   <!-- Your custom styles (optional) -->
