--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,17 @@ header,
 }
 }
 
+body::-webkit-scrollbar {
+  width: 12px;
+  background: #212529;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #f2a65a;
+  border: 3px solid #212529;
+  border-radius: 10px;
+}
+
+
 
 .gradient-background {
 
