Added new certificatio

--- a/_includes/body.html
+++ b/_includes/body.html
@@ -72,15 +72,21 @@
             </p><br>
             
             <div class="row justify-content-md-center">
-              <div class="col-3 col-md-3 col-sm-3">
-                <a href="https://www.credly.com/badges/c866e855-83a3-4d34-846b-6c93fe759ea5"><img src="assets/images/Oracle_Associates_Badge__1_.png" class="img-fluid wow fadeIn hvr-grow-rotate" width="100" data-wow-delay="0.5s" alt="Responsive image"></a>
-                 
-              </div>
+              
               <div class="col-3 col-md-3 col-sm-3">
                 <a href="https://www.credly.com/badges/074fd766-99d4-4452-9b92-6729a633b10c"><img src="assets/images/cka_from_cncfsite__281_29.png" class="img-fluid wow fadeIn hvr-grow-rotate" width="100" data-wow-delay="0.5s" alt="Responsive image"></a>
               </div>
               <div class="col-3 col-md-3 col-sm-3">
                 <a href="https://www.credly.com/badges/1887bd03-cd23-4fee-ba03-e3d81852878e"><img src="assets/images/ckad_from_cncfsite.png" class="img-fluid wow fadeIn hvr-grow-rotate" width="100" data-wow-delay="0.5s" alt="Responsive image"></a>
+              </div>
+              <div class="col-3 col-md-3 col-sm-3">
+                <a href="https://www.credly.com/badges/7827e3d4-05a7-4770-9936-2e1739639b14"><img src="assets/images/kubernetes-security-specialist-logo2.png" class="img-fluid wow fadeIn hvr-grow-rotate" width="100" data-wow-delay="0.5s" alt="Responsive image"></a>
+              </div>
+            </div>
+            <div class="row justify-content-md-center">
+              <div class="col-3 col-md-3 col-sm-3">
+                <a href="https://www.credly.com/badges/c866e855-83a3-4d34-846b-6c93fe759ea5"><img src="assets/images/Oracle_Associates_Badge__1_.png" class="img-fluid wow fadeIn hvr-grow-rotate" width="100" data-wow-delay="0.5s" alt="Responsive image"></a>
+                 
               </div>
               <div class="col-3 col-md-3 col-sm-3">
                 <a href="https://www.credly.com/badges/0d4ad9c7-83e2-473b-8802-2d96ae5d8d87/public_url"><img src="assets/images/hashicorp-certified-terraform-associate.png" class="img-fluid wow fadeIn hvr-grow-rotate" width="100" data-wow-delay="0.5s" alt="Responsive image"></a>
