--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark-poole">
-  {% include head.html %}
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>{{ page.title }} | {{ site.author.name }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | truncate: 160 }}">
+  
+  {% seo %}
 
-  <body>
-    <div class="container content">
-      <header class="masthead">
-        <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}/blog" title="Home">{{ site.title }}</a>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+  
+  <link rel="shortcut icon" href="{{ '/assets/images/personal-logo.png' | relative_url }}">
+  
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="/assets/css/style.css">
+</head>
 
-          <nav class="nav">
+<body>
+  {{ content }}
 
-            {% for nav in site.nav %}
-            <small><a href="{{ nav.url }}">{{ nav.title }}</a></small>
-            {% endfor %}
-
-          </nav>
-        </h3>
-      </header>
-
-      <main>
-        {{ content }}
-      </main>
-
-      <footer class="footer">
-        <small>
-          &copy;
-          <time datetime="{{ site.time | date_to_xmlschema }}"
-            >{{ site.time | date: '%Y' }}</time
-          >. All rights reserved.
-        </small>
-      </footer>
-    </div>
-
-   <script type="text/javascript">
-var _iub = _iub || [];
-_iub.csConfiguration = {"consentOnContinuedBrowsing":false,"whitelabel":false,"lang":"it","siteId":1985339,"cookiePolicyId":91034975,"cookiePolicyUrl":"https://www.iubenda.com/privacy-policy/91034975", "banner":{ "acceptButtonDisplay":true,"customizeButtonDisplay":true,"position":"float-top-center" }};
-</script>
-<script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
-  </body>
+  <!-- Cookie Consent -->
+  <script type="text/javascript">
+  var _iub = _iub || [];
+  _iub.csConfiguration = {"consentOnContinuedBrowsing":false,"whitelabel":false,"lang":"en","siteId":1985339,"cookiePolicyId":91034975,"cookiePolicyUrl":"https://www.iubenda.com/privacy-policy/91034975", "banner":{ "acceptButtonDisplay":true,"customizeButtonDisplay":true,"position":"float-top-center" }};
+  </script>
+  <script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
+  
   {% include analytics.html %}
+</body>
 </html>
