--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,24 +2,30 @@
 layout: default
 ---
 
-<article class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_string }}</time>
-  {{ content }}
-</article>
+<div class="post-page">
+  <header class="post-header">
+    <a href="/blog" class="back-link">← Back to blog</a>
+    <time datetime="{{ page.date | date_to_xmlschema }}" class="post-meta">{{ page.date | date: "%B %d, %Y" }}</time>
+    <h1 class="post-title">{{ page.title }}</h1>
+  </header>
 
-{% if site.related_posts != empty %}
-<aside class="related">
-  <h3>Related posts</h3>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-      <li>
-        <a href="{{ site.baseurl }}{{ post.url }}">
-          {{ post.title }}
-          <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time></small>
-        </a>
-      </li>
-    {% endfor %}
-  </ul>
-</aside>
-{% endif %}
+  <article class="post-content">
+    {{ content }}
+  </article>
+
+  {% if site.related_posts != empty %}
+  <aside class="related-posts">
+    <h3>Related posts</h3>
+    <ul>
+      {% for post in site.related_posts limit:3 %}
+        <li>
+          <a href="{{ post.url | relative_url }}">
+            {{ post.title }}
+            <span class="post-date">{{ post.date | date: "%b %d, %Y" }}</span>
+          </a>
+        </li>
+      {% endfor %}
+    </ul>
+  </aside>
+  {% endif %}
+</div>
