--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,13 +18,15 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 12px;
-  background: #212529;
+  width: 8px;
+  background: var(--body-bg);
 }
 body::-webkit-scrollbar-thumb {
-  background-color: #f2a65a;
-  border: 3px solid #212529;
-  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 4px;
+}
+body::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 
