--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -27,7 +27,7 @@
 
   &:hover,
   &:focus {
-    text-decoration: underline;
+    color: var(--link-color);
   }
 }
 
@@ -36,7 +36,11 @@
   display: block;
   margin-top: -.5rem;
   margin-bottom: var(--spacer);
-  color: var(--gray-600);
+  color: rgba(255, 255, 255, 0.4);
+  font-family: var(--code-font);
+  font-size: 0.85rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
 
 
@@ -59,9 +63,15 @@
 
   a {
     text-decoration: none;
+    color: var(--body-color);
+    transition: color 0.2s ease;
+
+    &:hover {
+      color: var(--link-color);
+    }
 
     small {
-      color: var(--gray-600);
+      color: rgba(255, 255, 255, 0.4);
     }
   }
 }
